--- a/GOLOOK/html/contract_confirm.html
+++ b/GOLOOK/html/contract_confirm.html
@@ -1,5 +1,4 @@
-<html>
-<head>
+<html><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -10,29 +9,6 @@
     <link href="..\css\company.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
     <script type="text/javascript" src="..\js\menu.js"></script>
-
-    <script type="text/javascript" src="..\js\jquery-1.11.1.min.js"></script>
-    <!-- Magnific Popup core CSS file -->
-    <link rel="stylesheet" href="..\magnific-popup/magnific-popup.css">
-    <!-- Magnific Popup core JS file -->
-    <script src="..\magnific-popup\jquery.magnific-popup.js"></script>
-    <!-- <script type="text/javascript">
-    $(document).ready(function() {
-        $('.popup-link').magnificPopup({
-          removalDelay: 300,
-          mainClass: 'mfp-fade'
-        });
-    });
-    </script> -->
-
-    <!--Magnific-popup-->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.8.9/jquery.magnific-popup.min.js" ></script>
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $('.iframe-link').magnificPopup({type:'iframe'});
-      });
-    </script>
-
     <!-- app interduce -->
     <script >
       var slideIndex = 1;
@@ -70,12 +46,7 @@
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <!--snow-->
     <script src="http://www.schillmania.com/projects/snowstorm/snowstorm-min.js" type="text/javascript"></script>
-
-
-</script>
-  </head>
-
-  <body>
+  </head><body>
     <!--facebook fance clube-->
     <div id="fb-root"></div>
     <script>
@@ -121,7 +92,7 @@
       </div>
     </div>
     <!--index banner-->
-    <div class="container banner welfare">
+    <div class="container banner contract_banner">
       <div class="col-md-12 text-center">
         <div id="company_logo">
           <embed src="..\image\golook.svg" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" class="menu_logo">
@@ -136,185 +107,205 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 w3-padding-top">
-            <h3 class="typo">福利優惠</h3>
-            <p>
-              <span class="redtext">+</span>&nbsp;&nbsp;享有700多間特約商家優惠</p>
-            <p>
-              <span class="redtext">+</span>&nbsp;&nbsp;組織成員才可享有專屬福利</p>
-            <img src="..\image\company_interduce_1.png" class="img-responsive">
+            <h3 class="typo">【GOLOOK+】電子會員卡合約書 - 確認頁</h3>
+            <p><span class="redtext">+</span>&nbsp;&nbsp;列印此合約後用印(一式兩份)，掃瞄並將正本寄至：桃園市龜山區文明一街4號(第一美卡-GOLOOK 收)</p>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- 特約商店列表 -->
-    <div class="section">
+    <div class="section contract_list">
       <div class="container">
-        <div class="row col-md-12">
-          <h3 class="typo">特約優惠商家列表</h3>
-          <!-- <p><a class="popup-link" href="#popup">顯示列表</a></p> -->
-          <p class="out_link"><a href="http://golook.tw/Group/PromoList.aspx?CardID=118" class="my-popup iframe-link">顯示列表</a></p>
-          <!-- <iframe class="screen" width="100%" height="100%" src="https://www.google.com.tw/webhp?hl=zh-TW&sa=X&ved=0ahUKEwiij7SLuo3fAhVIUbwKHaq0AcAQPAgH"></iframe> -->
+        <form>
+          <p>第一美卡事業股份有限公司（以下簡稱甲方）與<span class="under_line">王曉明</span><br>
+            （以下簡稱乙方），簽訂『電子會員卡合作合約書』(以下簡稱合約），由甲方提供GOLOOK+電子會員卡(以下簡稱電子會員卡)平台給乙方使用。<br>
+            <br>
+              為保障甲乙雙方之合作權益，雙方特協議訂定以下條款</p>
+
+              <h3>一、  合作期限</h3>
+              <p>自民國<span class="under_line">107年12月1日</span>至民國<span class="under_line">110年12月1日</span>止，滿約一年若任一方無在一個月前通知對方異動則自動續約 。</p>
+
+              <h3>二、  費用與付款方式</h3>
+              <p>服務租用費：新台幣36,000元整／年 （未稅）<br>
+                 付款方式：於<span class="under_line">107年11月20日</span>前，以<span class="under_line">匯款</span>方式支付此筆款項。</p>
+
+              <h3>三、  服務規則</h3>
+              <ul class="nb">
+                <li><p>甲方提供GOLOOK+電子會員卡平台功能(條碼顯示、卡片資訊、可用據點、優惠商家、粉絲專頁連結、新增其他連結、訊息推播、問答集點給乙方使用。</p></li>
+                <li><p>電子會員卡會於GOLOOK+APP前台顯示並讓使用者直接點選收藏。</p></li>
+                <li><p>乙方願意全力配合且遵守【電子會員卡】之各項規定：</p>
+                  <ul class="abc">
+                    <li><p>【電子會員卡】的特徵為卡片下方的GOLOOK+橫條。</p></li>
+                    <li><p>願意訓練所有櫃點識別【電子會員卡】，且【電子會員卡】之組織成員於消費前或結帳時出示本卡片，若總公司有公告優惠方案，櫃點服務人員應給予優惠折扣。</p></li>
+                    <li><p>甲方為增加族群轉換率，得使用乙方提供之商標（LOGO）、圖案、圖檔、文案、相關資訊及各項優惠於各種行銷平台及刊物中。</p></li>
+                    <li><p>甲乙雙方如針對優惠有修改需求，需先以Email或任何聯絡方式知會對方。</p></li>
+                  </ul>
+                </li>
+              </ul>
+
+              <h3>四、  準據法與相關法院</h3>
+              <ul class="nb">
+                <li><p>本合約及未備事項，蓋依中華民國法律為準據法。</p></li>
+                <li><p>本合約經甲乙雙方同意，內容若有未盡事宜，雙方應秉持誠信原則辦理。</p></li>
+                <li><p>如因本合約爭執而訴訟時，雙方同意以台灣台北地方法院為第一審管轄法院。</p></li>
+              </ul>
+
+              <h3>五、  其他</h3>
+              <ul class="nb">
+                <li><p>甲乙任一方對於本合約、以及因本合約所知悉或持有之他方未對外公開之資料或營業秘密，應負保密義務，除事先經他方書面同意、或依相關法令之規定、或依有權機關之命令或要求外，不得以任何方式提供或洩漏予第三人持有或知悉，亦不得為其他目的使用之，雙方終止合作關係時亦同。</p></li>
+                <li><p>乙方不得使用電子會員卡做不法、詐騙與違反善良風俗之行為，若違者，將無條件停止使用且收回會員卡，並賠償相關損失與負擔法律責任。</p></li>
+                <li><p>乙方確保提供之資料與圖片均是可以合法使用。</p></li>
+                <li><p>雙方依本合約所享有或負擔之權利及義務，非事先經他方書面同意，不得轉讓予任何第三人，亦不得委由第三人代為履行。</p></li>
+              </ul>
+
+              <p><br><b>本合約於雙方簽署時即生效力。<br>
+              本合約書一式二份，雙方各執一份為憑。</b><br>
+              <br>
+              立合約書人：<span class="under_line">王曉明</span></p>
+
+              <div class="company_information">
+                <table class="info_A">
+                  <tr>
+                    <td><p>甲　　方：</p></td>
+                    <td><p>第一美卡事業股份有限公司</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>統一編號：</p></td>
+                    <td><p>86500258</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>代 表 人：</p></td>
+                    <td><p>陳賢哲</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>電　　話：</p></td>
+                    <td><p>(02)2397-7923/(03)3183128</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>傳　　真：</p></td>
+                    <td><p>(02)2393-5050/(03)3277163</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>地　　址：</p></td>
+                    <td><p>桃園市龜山區文明一街4號</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>聯絡人：</p></td>
+                    <td><p>陳建銓</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>聯繫電話：</p></td>
+                    <td><p>0955-106-825</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>聯繫信箱：</p></td>
+                    <td><p>knightchen@beautifulcard.com</p></td>
+                  </tr>
+                </table>
+                <table class="info_B">
+                  <tr>
+                    <td><p>乙　　方：</p></td>
+                    <td><p>VR+ 虛擬實際股份有限公司</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>統一編號：</p></td>
+                    <td><p>86501234</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>代 表 人：</p></td>
+                    <td><p>王曉明</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>電　　話：</p></td>
+                    <td><p>(02)2397-7923/(03)3183128</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>傳　　真：</p></td>
+                    <td><p>(02)2393-5050/(03)3277163</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>地　　址：</p></td>
+                    <td><p>台北市南京東路三段111號</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>聯絡人：</p></td>
+                    <td><p>王一心</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>聯繫電話：</p></td>
+                    <td><p>0955-106-825</p></td>
+                  </tr>
+                  <tr>
+                    <td><p>聯繫信箱：</p></td>
+                    <td><p>erer@beautifulcard.com</p></td>
+                  </tr>
+                </table>
+              </div>
+        </form>
+        <div>
+          <button type="" class="submit w3-btn w3-white w3-border w3-border-red w3-round-large">下載合約</button>
+          <button type="" class="submit w3-btn w3-white w3-border w3-border-red w3-round-large">列印合約</button>
         </div>
+       <!--  <div class="service_specialist">
+          <p>服務人員:<span class="under_line">李敏號 專員</span></p>
+          <h4>公司用印上傳</h4>
+          <button type="" class="submit w3-btn w3-white w3-border w3-border-red w3-round-large">上傳</button>
+          <p class="ex">(公司用印請提供jpg或pdf格式)</p>
+        </div> -->
       </div>
     </div>
+
     <div class="section">
-      <div class="container">
+      <div class="container online_pay">
+        <h3>線上刷卡付費確認</h3>
         <div class="row">
-          <div class="col-md-12">
-            <h3 class="typo">即時訊息</h3>
-            <p>
-              <span class="redtext">+</span>&nbsp;&nbsp;透過免費訊息即時時通知員工/住戶任何最新資訊。</p>
-            <img src="..\image\company_interduce_3.png" class="img-responsive">
+          <div class="col-md-6">
+            <p>卡號：<span class="under_line">1022 2222 2222 2222</span></p>
+            <p>卡片日期：<span class="under_line">10/05</span></p>
+            <p>後三碼：<span class="under_line">900</span></p>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 ">
-            <h3 class="typo">福利金 (即將上線)</h3>
-            <p>
-              <span class="redtext">+</span>&nbsp;&nbsp;福委/管委可發放福利金給成員</p>
-            <p>
-              <span class="redtext">+</span>&nbsp;&nbsp;員工/住戶可使用福利金至商家消費，享有特殊優惠</p>
-            <p>
-              <span class="redtext">+</span>&nbsp;&nbsp;實報實銷，企業無須預先付款</p>
-            <img src="..\image\company_interduce_4-01.png" class="img-responsive">
+          <div class="col-md-6">
+            <p>姓名：<span class="under_line">王明天</span></p>
+            <p>手機：<span class="under_line">0988-000-000</span></p>
           </div>
-        </div>
-      </div>
-    </div>
-    <!-- apply form -->
-    <div class="section" id="joinus">
-      <div class="container">
-        <div class="row col-md-12 w3-padding-top">
-          <h3 class="typo">加入GOLOOK+</h3>
-          <p>
-            <span class="redtext">+</span>&nbsp;&nbsp;簡單四步驟，輕鬆加入GOLOOK+！</p>
-          <div class="col-md-3 col-xs-6">
-            <p>
-              <span class="redtext">STEP1.</span>&nbsp;&nbsp;填單</p>
-            <img src="..\image\company_form-01.png" class="img-responsive">
-          </div>
-          <div class="col-md-3 col-xs-6">
-            <p>
-              <span class="redtext">STEP2.</span>&nbsp;&nbsp;審查</p>
-            <img src="..\image\company_form-02.png" class="img-responsive">
-          </div>
-          <div class="col-md-3 col-xs-6">
-            <p>
-              <span class="redtext">STEP3.</span>&nbsp;&nbsp;簽約</p>
-            <img src="..\image\company_form-03.png" class="img-responsive">
-          </div>
-          <div class="col-md-3 col-xs-6">
-            <p>
-              <span class="redtext">STEP4.</span>&nbsp;&nbsp;上架</p>
-            <img src="..\image\company_form-04.png" class="img-responsive">
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <form class="form-horizontal typo" role="form">
+          <!-- <form class="form-horizontal typo" role="form">
             <div class="col-md-6">
               <div class="form-group company_applyform_input">
-                <input type="text" class="form-control" id="companyname" placeholder="單位名稱">
-              </div>
-              <div class="form-group company_applyform_input">
                 <div class="">
-                  <input type="tel" class="form-control" id="companypeople" placeholder="單位人數">
+                  <input type="tel" class="form-control" id="inputcaptcha" placeholder="卡號">
                 </div>
               </div>
               <div class="form-group company_applyform_input">
                 <div class="">
-                  <input type="text" class="form-control" id="companyaddress" placeholder="單位地址">
+                  <input type="tel" class="form-control" id="inputcaptcha" placeholder="卡片日期">
                 </div>
               </div>
               <div class="form-group company_applyform_input">
                 <div class="">
-                  <select class="form-control w3-text-grey" name="option">
-                    <option value="" disabled="" selected="">單位屬性</option>
-                    <option value="1">公司企業</option>
-                    <option value="2">校園團體</option>
-                    <option value="3">民間組織</option>
-                    <option value="4">政府單位</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group company_applyform_input">
-                <div class="">
-                  <input type="text" class="form-control" id="name" placeholder="聯絡人">
+                  <input type="tel" class="form-control" id="inputcaptcha" placeholder="後三碼">
                 </div>
               </div>
             </div>
             <div class="col-md-6">
-              <!-- <div class="form-group company_applyform_input">
-                <div class="">
-                  <input type="text" class="form-control" id="inputcaptcha" placeholder="推薦人/推薦單位">
-                </div>
-              </div> -->
               <div class="form-group company_applyform_input">
                 <div class="">
-                  <input type="tel" class="form-control" id="inputcaptcha" placeholder="連絡電話">
+                  <input type="text" class="form-control" id="name" placeholder="姓名">
                 </div>
               </div>
               <div class="form-group company_applyform_input">
                 <div class="">
-                  <input type="text" class="form-control" id="inputcaptcha" placeholder="分機">
+                  <input type="tel" class="form-control" id="inputcaptcha" placeholder="手機">
                 </div>
               </div>
-              <div class="form-group company_applyform_input">
-                <div class="">
-                  <input type="email" class="form-control" id="inputcaptcha" placeholder="聯絡信箱">
-                </div>
-              </div>
-              <!--<div class="form-group company_applyform_input">
-                <div class="">
-                  <input type="email" class="col-md-5 captcha" id="captcha" placeholder="驗證碼">
-                  <img src="..\..\design\亂七八糟之素材\20151208100353611.png" class="col-md-2 img-responsive captcha">
-                  <a class="col-md-1 fa fa-2x fa-fw fa-refresh"></a>
-                </div>
-              </div>-->
-              <div class="g-recaptcha" data-sitekey="6Le-FgcUAAAAAJWWjVSHCKshONa6cfmnMqIc-mJ5"></div>
             </div>
-          </form>
+          </form> -->
         </div>
         <div class="text-center">
           <button type="submit" class="submit w3-btn w3-white w3-border w3-border-red w3-round-large">送出</button>
         </div>
       </div>
     </div>
-    <!-- <div class="section" id="brand">
-      <div class="col-md-12 text-center w3-padding-top">
-        <h3 class="greytext typo">合作品牌</h3>
-      </div>
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-md-2 col-xs-4">
-            <img src="..\image\company_brand-01.png" class="img-responsive">
-          </div>
-          <div class="col-md-2 col-xs-4">
-            <img src="..\image\company_brand-02.png" class="img-responsive">
-          </div>
-          <div class="col-md-2 col-xs-4">
-            <img src="..\image\company_brand-03.png" class="img-responsive img-rounded">
-          </div>
-          <div class="col-md-2 col-xs-4">
-            <img src="..\image\company_brand-04.png" class="img-responsive">
-          </div>
-          <div class="col-md-2 col-xs-4">
-            <img src="..\image\company_brand-05.png" class="img-responsive">
-          </div>
-          <div class="col-md-2 col-xs-4">
-            <img src="..\image\company_brand-06.jpg" class="img-responsive">
-          </div>
-        </div>
-      </div>
-    </div> -->
+
     <div class="section" id="footer">
       <div class="container">
         <div class="row footer">
@@ -384,9 +375,5 @@
       </div>
     </div>
 
-    <!-- 優惠店家網頁 -->
-    <div id="popup" class="white-popup mfp-hide">
-        <iframe src="http://golook.tw/Group/PromoList.aspx?CardID=118"></iframe>
-    </div>
-</body>
-</html>
+
+</body></html>
