--- a/GOLOOK/html/special_store.html
+++ b/GOLOOK/html/special_store.html
@@ -1,4 +1,5 @@
-<html><head>
+<html>
+<head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -38,7 +39,11 @@
         </script>
         <!--captcha-->
         <script src="https://www.google.com/recaptcha/api.js"></script>
-    </head><body>
+        <!--snow-->
+        <script src="http://www.schillmania.com/projects/snowstorm/snowstorm-min.js" type="text/javascript"></script>
+
+</head>
+<body>
         <!--facebook fance clube-->
         <div id="fb-root"></div>
         <script>
