--- a/12/index.html
+++ b/12/index.html
@@ -55,7 +55,7 @@
                 <header class="p3">
                     <h1 class="ampstart-fullpage-hero-heading mb3 bold">
                         <span class="ampstart-fullpage-hero-heading-text">
-                            這些生肖經常吃虧<br>卻最有福報後福無止盡
+                            這些生肖<br>經常吃虧<br>卻最有福報<br>後福無止盡
                         </span>
                     </h1>
                 </header>
