--- a/GOLOOK/html/contract.html
+++ b/GOLOOK/html/contract.html
@@ -117,17 +117,17 @@
     <div class="section contract_list">
       <div class="container">
         <form>
-          <p>第一美卡事業股份有限公司（以下簡稱甲方）與<span class="under_line">王曉明</span><br>
+          <p>第一美卡事業股份有限公司（以下簡稱甲方）與<input type="" name="" value="王曉明"><br>
             （以下簡稱乙方），簽訂『電子會員卡合作合約書』(以下簡稱合約），由甲方提供GOLOOK+電子會員卡(以下簡稱電子會員卡)平台給乙方使用。<br>
             <br>
               為保障甲乙雙方之合作權益，雙方特協議訂定以下條款</p>
 
               <h3>一、  合作期限</h3>
-              <p>自民國<span class="under_line">107年12月1日</span>至民國<span class="under_line">110年12月1日</span>止，滿約一年若任一方無在一個月前通知對方異動則自動續約 。</p>
+              <p>自民國<input type="" name="" value="107年12月1日"></span>至民國<input type="" name="" value="110年12月1日">止，滿約一年若任一方無在一個月前通知對方異動則自動續約 。</p>
 
               <h3>二、  費用與付款方式</h3>
               <p>服務租用費：新台幣36,000元整／年 （未稅）<br>
-                 付款方式：於<span class="under_line">107年11月20日</span>前，以<span class="under_line">匯款</span>方式支付此筆款項。</p>
+                 付款方式：於<input type="" name="" value="107年11月20日">前，以<input type="" name="" value="匯款">方式支付此筆款項。</p>
 
               <h3>三、  服務規則</h3>
               <ul class="nb">
@@ -161,7 +161,7 @@
               <p><br><b>本合約於雙方簽署時即生效力。<br>
               本合約書一式二份，雙方各執一份為憑。</b><br>
               <br>
-              立合約書人：<span class="under_line">王曉明</span></p>
+              立合約書人：<input type="" name="" value="王曉明"></p>
 
               <div class="company_information">
                 <table class="info_A">
@@ -205,39 +205,39 @@
                 <table class="info_B">
                   <tr>
                     <td><p>乙　　方：</p></td>
-                    <td><p>VR+ 虛擬實際股份有限公司</p></td>
+                    <td><input type="" name="" value="VR+ 虛擬實際股份有限公司"></td>
                   </tr>
                   <tr>
                     <td><p>統一編號：</p></td>
-                    <td><p>86501234</p></td>
+                    <td><input type="" name="" value="86501234"></td>
                   </tr>
                   <tr>
                     <td><p>代 表 人：</p></td>
-                    <td><p>王曉明</p></td>
+                    <td><input type="" name="" value="王曉明"></td>
                   </tr>
                   <tr>
                     <td><p>電　　話：</p></td>
-                    <td><p>(02)2397-7923/(03)3183128</p></td>
+                    <td><input type="" name="" value="(02)2397-7923/(03)3183128"></td>
                   </tr>
                   <tr>
                     <td><p>傳　　真：</p></td>
-                    <td><p>(02)2393-5050/(03)3277163</p></td>
+                    <td><input type="" name="" value="(02)2393-5050/(03)3277163"></td>
                   </tr>
                   <tr>
                     <td><p>地　　址：</p></td>
-                    <td><p>台北市南京東路三段111號</p></td>
+                    <td><input type="" name="" value="台北市南京東路三段111號"></td>
                   </tr>
                   <tr>
                     <td><p>聯絡人：</p></td>
-                    <td><p>王一心</p></td>
+                    <td><input type="" name="" value="王一心"></td>
                   </tr>
                   <tr>
                     <td><p>聯繫電話：</p></td>
-                    <td><p>0955-106-825</p></td>
+                    <td><input type="" name="" value="0955-106-825"></td>
                   </tr>
                   <tr>
                     <td><p>聯繫信箱：</p></td>
-                    <td><p>erer@beautifulcard.com</p></td>
+                    <td><input type="" name="" value="erer@beautifulcard.com"></td>
                   </tr>
                 </table>
               </div>
