--- a/14/index.html
+++ b/14/index.html
@@ -55,7 +55,7 @@
                 <header class="p3">
                     <h1 class="ampstart-fullpage-hero-heading mb3 bold">
                         <span class="ampstart-fullpage-hero-heading-text">
-                            父母有一人這生肖<br>生的孩子漂亮又多福<br>富貴又孝順！
+                            父母有一人<br>這生肖<br>生的孩子<br>漂亮又多福<br>富貴又孝順！
                         </span>
                     </h1>
                 </header>
