--- a/15/index.html
+++ b/15/index.html
@@ -149,7 +149,7 @@
                     </figcaption>
                 </figure>
                 <!-- End Image with Caption -->
-                <p class="m3">屬猴的人一般性格外向,凡事能看得開,總能保持著年輕的心態，永遠樂觀向上。誠心待人，用心做事，從不算計別人，他們遇到困難時，總有出手貴人相助順利過關。很注重保養身體健康，不喜歡計較，心態平和。</p>
+                <p class="m3">屬猴的人一般性格外向，凡事能看得開，總能保持著年輕的心態，永遠樂觀向上。誠心待人，用心做事，從不算計別人，他們遇到困難時，總有出手貴人相助順利過關。很注重保養身體健康，不喜歡計較，心態平和。</p>
 
                 <!-- Start Image with Caption -->
                 <figure class="ampstart-image-with-caption m0 relative mb4">
