--- a/JH/life_style.html
+++ b/JH/life_style.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業</title>
+<title>正豪木業 - 風格選品</title>
 <meta name='description' content=""/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
@@ -87,92 +87,22 @@
     </nav>
 </header>
 
-<main class="main_contents">
-    <section class="bannerBox">
-        <a class="more go01"></a>
-        <div class="flexslider" id="flexslider">
-            <!-- <div class="titleBox">
-                <div class="ContentsBox">
-                    <h2 class="banner_title">「好門」讓您的家，<br>多了3分溫潤，拂去7分喧鬧。</h2>
-                </div>
-            </div> -->
-            <ul class="slides">
-                <li><img src="images/banner/main_01.png" width="100%"></li>
-                <li><img src="images/banner/main_02.png" width="100%"></li>
-                <li><img src="images/banner/main_03.png" width="100%"></li>
-                <li><img src="images/banner/main_04.png" width="100%"></li>
+<main class="main_contents inside_contents">
+    <div class="bannerBox banner_04"></div>
+    <section class="ContentsBox">
+        <div class="life_style_box">
+            <h3 class="main_title">風格選品 / <span>LIFE STYLE</span></h3>
+            <ul class="clearfix">
+                <li><img src="images/life_style/l_01.jpg" alt="細緻沉穩風"></li>
+                <li><img src="images/life_style/l_02.jpg" alt="玩色鄉村風"></li>
+                <li><img src="images/life_style/l_03.jpg" alt="雋永經典風"></li>
+                <li><img src="images/life_style/l_04.jpg" alt="英式田園風"></li>
+                <li><img src="images/life_style/l_05.jpg" alt="匠心懷舊風"></li>
+                <li><img src="images/life_style/l_06.jpg" alt="經典黑白風"></li>
+                <li><img src="images/life_style/l_07.jpg" alt="現代北歐風"></li>
+                <li><img src="images/life_style/l_08.jpg" alt="工業穀倉門"></li>
             </ul>
         </div>
-    </section>
-    <section class="serviceBox" id="goThe01">
-        <div class="top_title">
-            <h3>正豪嚴選 / <span>THE CAREFULLY SELECTED</span></h3>
-        </div>
-        <div class="ContentsBox">
-            <ul class="service_list clearfix">
-                <li>
-                    <img src="images/service_list_img_01.png">
-                    <h4>選材來源</h4>
-                </li>
-                <li>
-                    <img src="images/service_list_img_02.png">
-                    <h4>原料把關</h4>
-                </li>
-                <li>
-                    <img src="images/service_list_img_03.png">
-                    <h4>特色漆面</h4>
-                </li>
-                <li>
-                    <img src="images/service_list_img_04.png">
-                    <h4>獨門工法</h4>
-                </li>
-            </ul>
-            <h4>以嚴謹的品質控管與專業技術構築您的居家「好門」</h4>
-            <p class="year">正豪木業自1993年成立迄今，以品質、創新、客戶為先的經營信念，努力耕耘實木門領域，擁有超過40年經歷的資深師傅做專業製造與嚴謹監督，多年來深獲國內外客戶的高度肯定。</p>
-            <p class="more"><a href="#">更多資訊</a></p>
-        </div>
-    </section>
-    <section class="newsBox">
-        <div class="top_title">
-            <h3>最新消息 / <span>NEWS</span></h3>
-        </div>
-        <div class="ContentsBox">
-            <ul class="news_list clearfix">
-                <li><a href="#">
-                    <div class="top_img"><img src="images/bg_news_01.png" width="100%"></div>
-                    <div class="newBox">
-                        <div class="info clearfix">
-                            <p class="day"><span>2018</span>AUG_16</p>
-                            <p class="tag">官方公告</p>
-                            <p class="more_details">詳細內容 >></p>
-                        </div>
-                        <p class="ex">複合實木房間門_經濟實惠的創新選擇。</p>
-                    </div>
-                    </a>
-                </li>
-                <li><a href="#">
-                    <div class="top_img"><img src="images/bg_news_02.png" width="100%"></div>
-                    <div class="newBox">
-                        <div class="info clearfix">
-                            <p class="day"><span>2018</span>AUG_16</p>
-                            <p class="tag">官方公告</p>
-                            <p class="more_details">詳細內容 >></p>
-                        </div>
-                        <p class="ex">工業風實木門板_率性大器的風格呈現。</p>
-                    </div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section class="styleBox">
-        <div class="top_title">
-            <h3>風格選品 / <span>LIFE STYLE</span></h3>
-        </div>
-        <ul class="style_list clearfix">
-            <li class="style_01"><a href="#"></a></li>
-            <li class="style_02"><a href="#"></a></li>
-        </ul>
     </section>
 </main>
 
