Updete JH - html

--- a/JH/index.html
+++ b/JH/index.html
@@ -55,7 +55,7 @@
                 </div>
             </li>
             <li><h3><a href="news.html">最新消息  ｜  NEWS</a></h3></li>
-            <li><h3><a href="product.html">產品介紹  ｜  PRODUCT</a></h3></li>
+            <li><h3><a href="product-01.html">產品介紹  ｜  PRODUCT</a></h3></li>
             <li><h3><a href="life_style.html">風格選品  ｜  LIFE STYLE</a></h3></li>
             <li><h3><a href="faq.html">木門問答  ｜  FAQ</a></h3></li>
             <li><h3><a href="order.html">訂購流程  ｜  ORDER PROCESS</a></h3></li>
@@ -74,7 +74,7 @@
             <ul class="top_menu clearfix">
                 <li><h3><a href="about.html">關於我們</a></h3></li>
                 <li><h3><a href="news.html">最新消息</a></h3></li>
-                <li><h3><a href="product.html">產品介紹</a></h3></li>
+                <li><h3><a href="product-01.html">產品介紹</a></h3></li>
                 <li><h3><a href="life_style.html">風格選品</a></h3></li>
                 <li><h3><a href="faq.html">木門FAQ</a></h3></li>
                 <li><h3><a href="order.html">訂購流程</a></h3></li>
@@ -138,7 +138,7 @@
         </div>
         <div class="ContentsBox">
             <ul class="news_list clearfix">
-                <li><a href="#">
+                <li><a href="news-01.html">
                     <div class="top_img"><img src="images/bg_news_01.png" width="100%"></div>
                     <div class="newBox">
                         <div class="info clearfix">
@@ -150,11 +150,11 @@
                     </div>
                     </a>
                 </li>
-                <li><a href="#">
+                <li><a href="news-02.html">
                     <div class="top_img"><img src="images/bg_news_02.png" width="100%"></div>
                     <div class="newBox">
                         <div class="info clearfix">
-                            <p class="day"><span>2018</span>AUG_16</p>
+                            <p class="day"><span>2018</span>OCT_31</p>
                             <p class="tag">官方公告</p>
                             <p class="more_details">詳細內容 >></p>
                         </div>
