--- a/JH/life_style.html
+++ b/JH/life_style.html
@@ -14,25 +14,6 @@
 <script type="text/javascript" src="js/goto.js"></script>
 
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
-
-<!-- jQuery -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js">\x3C/script>')</script>
-
-<!-- FlexSlider -->
-<script defer src="js/jquery.flexslider.js"></script>
-
-<script type="text/javascript">
-    $(window).load(function(){
-      $('#flexslider').flexslider({
-        animation: "slide",
-        start: function(slider){
-          $('body').removeClass('loading');
-        }
-      });
-    });
-  </script>
-
 </head>
 
 
@@ -55,7 +36,7 @@
                 </div>
             </li>
             <li><h3><a href="news.html">最新消息  ｜  NEWS</a></h3></li>
-            <li><h3><a href="product.html">產品介紹  ｜  PRODUCT</a></h3></li>
+            <li><h3><a href="product-01.html">產品介紹  ｜  PRODUCT</a></h3></li>
             <li><h3><a href="life_style.html">風格選品  ｜  LIFE STYLE</a></h3></li>
             <li><h3><a href="faq.html">木門問答  ｜  FAQ</a></h3></li>
             <li><h3><a href="order.html">訂購流程  ｜  ORDER PROCESS</a></h3></li>
@@ -74,7 +55,7 @@
             <ul class="top_menu clearfix">
                 <li><h3><a href="about.html">關於我們</a></h3></li>
                 <li><h3><a href="news.html">最新消息</a></h3></li>
-                <li><h3><a href="product.html">產品介紹</a></h3></li>
+                <li><h3><a href="product-01.html">產品介紹</a></h3></li>
                 <li><h3><a href="life_style.html">風格選品</a></h3></li>
                 <li><h3><a href="faq.html">木門FAQ</a></h3></li>
                 <li><h3><a href="order.html">訂購流程</a></h3></li>
@@ -93,14 +74,54 @@
         <div class="life_style_box">
             <h3 class="main_title">風格選品 / <span>LIFE STYLE</span></h3>
             <ul class="clearfix">
-                <li><img src="images/life_style/l_01.jpg" alt="細緻沉穩風"></li>
-                <li><img src="images/life_style/l_02.jpg" alt="玩色鄉村風"></li>
-                <li><img src="images/life_style/l_03.jpg" alt="雋永經典風"></li>
-                <li><img src="images/life_style/l_04.jpg" alt="英式田園風"></li>
-                <li><img src="images/life_style/l_05.jpg" alt="匠心懷舊風"></li>
-                <li><img src="images/life_style/l_06.jpg" alt="經典黑白風"></li>
-                <li><img src="images/life_style/l_07.jpg" alt="現代北歐風"></li>
-                <li><img src="images/life_style/l_08.jpg" alt="工業穀倉門"></li>
+                <li>
+                    <a class="hovereffect" href="#">
+                        <img src="images/life_style/l_01.jpg" alt="細緻沉穩風">
+                        <h2 class="style_title">恬靜鄉村風</h2>
+                    </a>
+                </li>
+                <li>
+                    <a class="hovereffect" href="#">
+                        <img src="images/life_style/l_02.jpg" alt="玩色鄉村風">
+                        <h2 class="style_title">恬靜鄉村風</h2>
+                    </a>
+                </li>
+                <li>
+                    <a class="hovereffect" href="#">
+                        <img src="images/life_style/l_03.jpg" alt="雋永經典風">
+                        <h2 class="style_title">恬靜鄉村風</h2>
+                    </a>
+                </li>
+                <li>
+                    <a class="hovereffect" href="#">
+                        <img src="images/life_style/l_04.jpg" alt="英式田園風">
+                        <h2 class="style_title">恬靜鄉村風</h2>
+                    </a>
+                </li>
+                <li>
+                    <a class="hovereffect" href="#">
+                        <img src="images/life_style/l_05.jpg" alt="匠心懷舊風">
+                        <h2 class="style_title">恬靜鄉村風</h2>
+                    </a>
+                </li>
+                <li>
+                    <a class="hovereffect" href="#">
+                        <img src="images/life_style/l_06.jpg" alt="經典黑白風">
+                        <h2 class="style_title">恬靜鄉村風</h2>
+                    </a>
+                </li>
+                <li>
+                    <a class="hovereffect" href="#">
+                        <img src="images/life_style/l_07.jpg" alt="現代北歐風">
+                        <h2 class="style_title">恬靜鄉村風</h2>
+                    </a>
+                </li>
+                <li>
+                    <a class="hovereffect" href="#">
+                        <img src="images/life_style/l_08.jpg" alt="工業穀倉門">
+                        <h2 class="style_title">恬靜鄉村風</h2>
+                    </a>
+                </li>
             </ul>
         </div>
     </section>
