--- a/JH/news-02.html
+++ b/JH/news-02.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業 - 最新消息</title>
+<title>複合實木房間門_經濟實惠的創新選擇</title>
 <meta name='description' content=""/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
@@ -71,35 +71,20 @@
 <main class="main_contents inside_contents">
     <div class="bannerBox banner_02"></div>
     <section class="ContentsBox">
-        <div class="news_box">
-            <h3 class="main_title">最新消息 / <span>NEWS</span></h3>
-            <ul class="news_list">
-                <li class="news_photo_01">
-                    <a href="news-01.html" class="clearfix">
-                        <div class="left_img"></div>
-                        <div class="newBox">
-                            <div class="info">
-                                <p class="day"><span>2018</span>AUG_16</p>
-                                <p class="ex">正豪木業榮獲2018MIT台灣金選獎的肯定</p>
-                            </div>
-                            <p class="more_details">詳細內容 >></p>
-                        </div>
-                    </a>
-                </li>
-                <li class="news_photo_02">
-                    <a href="news-02.html" class="clearfix">
-                        <div class="left_img"></div>
-                        <div class="newBox">
-                            <div class="info">
-                                <p class="day"><span>2018</span>OCT_31</p>
-                                <p class="ex">複合實木門板_經濟實惠的創新選擇。</p>
-                            </div>
-                            <p class="more_details">詳細內容 >></p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-            <p class="btn_more"><a href="#">看更多</a></p>
+        <div class="news_box news_article">
+            <h3 class="main_title"><span>2018  OCT _ 31</span><br><b>複合實木房間門_經濟實惠的創新選擇。</b></h3>
+            <div class="photo width_100">
+                <img src="images/news/article_img_03.png" alt="全系列複合實木門">
+            </div>
+            <p class="info">我們不斷的改良製作工法，以木門不只「美麗」更要「堪用」的堅定信念，提供環保永續林的高級樹種，選用安全認證塗料及木膠，更是100%台灣手工製造，絕非假他人代工，所有品質由我們嚴格控管。<br>
+                <br>
+                為改善天然木材過度膨脹或收縮之現象，提高大型木門使用壽命，達到堅固、抗壓的效果，正豪在2016年專利申請通過中鑲複合實木工法。此法特別針對木門容易變形的部分，運用累積逾40年的獨家技術，採多道工序進行木門結構調整，搭配我們改良的膠合技術，讓正豪的木門在正常使用下不易變形扭曲，使木門歷久彌新，特別適合房間門、推拉門等較大型的傢俱使用。
+                <br><br>
+            </p>
+            <div class="bottom_btn clearfix">
+                <p class="more"><a href="news-01.html">上一則</a></p>
+                <p class="more"><a href="news-03.html">下一則</a></p>
+            </div>
         </div>
     </section>
 </main>
