--- a/JH/product.html
+++ b/JH/product.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-TW">
 <head>
 <meta charset="UTF-8">
-<title>正豪木業 - 最新消息</title>
+<title>正豪木業 - 產品介紹</title>
 <meta name='description' content=""/>
 <meta name='keywords' content=""/>
 <meta name="MobileOptimized" content="width">
@@ -14,6 +14,25 @@
 <script type="text/javascript" src="js/goto.js"></script>
 
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+
+<!-- jQuery -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js">\x3C/script>')</script>
+
+<!-- FlexSlider -->
+<script defer src="js/jquery.flexslider.js"></script>
+
+<script type="text/javascript">
+    $(window).load(function(){
+      $('#flexslider').flexslider({
+        animation: "slide",
+        start: function(slider){
+          $('body').removeClass('loading');
+        }
+      });
+    });
+  </script>
+
 </head>
 
 
@@ -36,7 +55,7 @@
                 </div>
             </li>
             <li><h3><a href="news.html">最新消息  ｜  NEWS</a></h3></li>
-            <li><h3><a href="product-01.html">產品介紹  ｜  PRODUCT</a></h3></li>
+            <li><h3><a href="product.html">產品介紹  ｜  PRODUCT</a></h3></li>
             <li><h3><a href="life_style.html">風格選品  ｜  LIFE STYLE</a></h3></li>
             <li><h3><a href="faq.html">木門問答  ｜  FAQ</a></h3></li>
             <li><h3><a href="order.html">訂購流程  ｜  ORDER PROCESS</a></h3></li>
@@ -55,7 +74,7 @@
             <ul class="top_menu clearfix">
                 <li><h3><a href="about.html">關於我們</a></h3></li>
                 <li><h3><a href="news.html">最新消息</a></h3></li>
-                <li><h3><a href="product-01.html">產品介紹</a></h3></li>
+                <li><h3><a href="product.html">產品介紹</a></h3></li>
                 <li><h3><a href="life_style.html">風格選品</a></h3></li>
                 <li><h3><a href="faq.html">木門FAQ</a></h3></li>
                 <li><h3><a href="order.html">訂購流程</a></h3></li>
@@ -68,39 +87,38 @@
     </nav>
 </header>
 
-<main class="main_contents inside_contents">
-    <div class="bannerBox banner_02"></div>
-    <section class="ContentsBox">
-        <div class="news_box">
-            <h3 class="main_title">最新消息 / <span>NEWS</span></h3>
-            <ul class="news_list">
-                <li class="news_photo_01">
-                    <a href="news-01.html" class="clearfix">
-                        <div class="left_img"></div>
-                        <div class="newBox">
-                            <div class="info">
-                                <p class="day"><span>2018</span>AUG_16</p>
-                                <p class="ex">正豪木業榮獲2018MIT台灣金選獎的肯定</p>
-                            </div>
-                            <p class="more_details">詳細內容 >></p>
-                        </div>
-                    </a>
+<main class="main_contents inside_contents produc_box">
+    <div class="bannerBox banner_01"></div>
+    <section class="ContentsBox clearfix">
+        <div class="produc_left_menu">
+            <h3 class="main_title">產品介紹 / <span>PRODUCT</span></h3>
+            <h4 class="sub_title">穀倉工業風</h4>
+            <p class="info">挑選工業風格門板與搭配皮革沙發、金屬鐵件等單品，形塑屬於你的工業風家居。</p>
+            <ul class="menu_type">
+                <li class="type_title open">
+                    <h5>■ 房間門/推拉門</h5>
+                    <ul class="the_sub_menu">
+                        <li><p><a href="#">細緻沉穩風</a></p></li>
+                        <li><p><a href="#">恬靜鄉村風</a></p></li>
+                        <li><p><a href="#">雋永經典風</a></p></li>
+                        <li><p><a href="#">英式田園風風</a></p></li>
+                        <li><p><a href="#">匠心懷舊系列</a></p></li>
+                        <li><p><a href="#">經典黑白系列</a></p></li>
+                        <li><p><a href="#">現代北歐風</a></p></li>
+                        <li><p><a href="#">工業穀倉系列</a></p></li>
+                    </ul>
                 </li>
-                <li class="news_photo_02">
-                    <a href="news-02.html" class="clearfix">
-                        <div class="left_img"></div>
-                        <div class="newBox">
-                            <div class="info">
-                                <p class="day"><span>2018</span>OCT_31</p>
-                                <p class="ex">複合實木門板_經濟實惠的創新選擇。</p>
-                            </div>
-                            <p class="more_details">詳細內容 >></p>
-                        </div>
-                    </a>
+                <li class="type_title">
+                    <h5>■ 實木門框</h5>
                 </li>
             </ul>
-            <p class="btn_more"><a href="#">看更多</a></p>
         </div>
+        <ul class="produc_right_deta">
+            <li>
+                <img src="images/about/img_01.jpg" alt="正豪木業">
+                <p>R25-13-粗獷深柚色</p>
+            </li>
+        </ul>
     </section>
 </main>
 
